// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConstantAssignment 1`] = `
Object {
  "expression": Object {
    "kind": "NumberLiteral",
    "value": 3,
  },
  "identifier": Object {
    "kind": "Identifier",
    "value": "x",
  },
  "kind": "ConstantAssignment",
}
`;

exports[`FunctionCall 1`] = `
Object {
  "argument": Object {
    "definitions": Array [
      Object {
        "expression": Object {
          "kind": "StringLiteral",
          "value": "hello",
        },
        "identifier": Object {
          "kind": "Identifier",
          "value": "msg",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
  "identifier": Object {
    "kind": "Identifier",
    "value": "log",
  },
  "kind": "FunctionCall",
}
`;

exports[`NamedTupleDefinition 1`] = `
Object {
  "identifier": Object {
    "kind": "Identifier",
    "value": "Point",
  },
  "kind": "NamedTupleDefinition",
  "tuple": Object {
    "definitions": Array [
      Object {
        "kind": "Identifier",
        "value": "number",
      },
      Object {
        "kind": "Identifier",
        "value": "number",
      },
    ],
    "kind": "TupleDefinition",
  },
}
`;

exports[`Program 1`] = `
Array [
  Object {
    "identifier": Object {
      "kind": "Identifier",
      "value": "Point",
    },
    "kind": "NamedRecordDefinition",
    "record": Object {
      "definitions": Array [
        Object {
          "identifier": Object {
            "kind": "Identifier",
            "value": "x",
          },
          "kind": "NamedDefinition",
          "typeTag": Object {
            "identifier": Object {
              "kind": "Identifier",
              "value": "number",
            },
            "kind": "TypeTag",
          },
        },
        Object {
          "identifier": Object {
            "kind": "Identifier",
            "value": "y",
          },
          "kind": "NamedDefinition",
          "typeTag": Object {
            "identifier": Object {
              "kind": "Identifier",
              "value": "number",
            },
            "kind": "TypeTag",
          },
        },
      ],
      "kind": "RecordDefinition",
    },
  },
  Object {
    "expression": Object {
      "kind": "NumberLiteral",
      "value": 1,
    },
    "identifier": Object {
      "kind": "Identifier",
      "value": "one",
    },
    "kind": "ConstantAssignment",
  },
  Object {
    "expression": Object {
      "identifier": Object {
        "kind": "Identifier",
        "value": "Point",
      },
      "kind": "NamedRecordLiteral",
      "recordLiteral": Object {
        "definitions": Array [
          Object {
            "expression": Object {
              "kind": "Identifier",
              "value": "one",
            },
            "identifier": Object {
              "kind": "Identifier",
              "value": "x",
            },
            "kind": "NamedLiteral",
          },
          Object {
            "expression": Object {
              "kind": "NumberLiteral",
              "value": 2,
            },
            "identifier": Object {
              "kind": "Identifier",
              "value": "y",
            },
            "kind": "NamedLiteral",
          },
        ],
        "kind": "RecordLiteral",
      },
    },
    "identifier": Object {
      "kind": "Identifier",
      "value": "point",
    },
    "kind": "ConstantAssignment",
  },
  Object {
    "expression": Object {
      "kind": "Identifier",
      "value": "point",
    },
    "kind": "DEBUG_Log",
  },
]
`;

exports[`TupleDefinition 1`] = `
Object {
  "definitions": Array [
    Object {
      "kind": "Identifier",
      "value": "number",
    },
    Object {
      "kind": "Identifier",
      "value": "number",
    },
  ],
  "kind": "TupleDefinition",
}
`;

exports[`string 1`] = `
Object {
  "kind": "StringLiteral",
  "value": "hello world",
}
`;

exports[`string 2`] = `
Object {
  "kind": "StringLiteral",
  "value": "hello
 world",
}
`;
